# HealthLog

./: .gitignore  Makefile  README.md  RUNBOOK.md  alembic.ini  docker-compose.test.yml  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
docs/: sleep_apnea_detector_spec.md
health_log/: app.py  db.py  dependencies.py  errors.py  security.py  settings.py  utils.py
health_log/analysis/: __init__.py  constants.py  engine.py  models.py  rules.py  utils.py  windows.py
health_log/repositories/: analysis.py  auth.py  repository.py
health_log/services/: analysis_service.py  apns.py  apple_health_parser.py  detect_sleep_apnea.py  import_xml.py  ingestion.py  sync_scheduler.py
migrations/: env.py
migrations/versions/: 1f6e2c7ab412_add_provider_and_raw_fingerprint.py  2cdca49ff2e2_change_vo_2_max_value_to_text.py  42b73e081090_add_sleep_apnea_events_table.py  5afc1f597bdb_change_respiratory_rate_value_to_text.py  6d92c630e55d_init_db.py  9b8520067a18_add_creationdate_indexes.py  a8f3c1d2e4b5_sleep_apnea_events_metadata_columns.py  b1c2d3e4f5a6_add_sync_analysis_and_apns.py  bc2a4f91c8de_add_ingestion_staging_and_unique_constraints.py  c3d4e5f6a7b8_rename_xml_uploads_to_health_uploads.py  (+3 more)
monitoring/: nginx-healthlog.conf  prometheus.yml
scripts/: daily_pipeline.sh  install_daily_cron.sh  uninstall_daily_cron.sh
tests/: test_analysis_api.py  test_auth_api.py  test_menstrual_cycle.py  test_metrics.py  test_parser.py  test_regression_xml_chunk.py  test_rule_engine.py  test_security.py  test_sync_api.py  test_utils.py
(+76 files in other folders)
